<!DOCTYPE resources [<!ENTITY appname "Agendapp"><!ENTITY contactmail "contact@agendapp.fr"><!ENTITY website "https://agendapp.fr/"><!ENTITY version "4.0.0-ALPHA">]>

<resources>
    <!-- Nom de l'application -->
    <string name="app_name">&appname;</string>

    <!-- Titres -->
    <string name="title_fusion">Fusionner ces devoirs</string>
    <string name="title_user">Paramètres</string>
    <string name="title_newpage">Ajouter un devoir</string>
    <string name="title_commentpage">Commentaires</string>
    <string name="title_selectfilter">Rechercher</string>
    <string name="title_filterresult">Résultats de la recherche</string>
    <string name="title_login">Agendapp</string>
    <string name="title_calendar">Vue Calendrier</string>

    <!-- Navigation -->
    <string name="nav_devoirs">À faire</string>
    <string name="nav_archives">Archives</string>

    <!-- Mois de l'année -->
    <string name="janvier">Janvier</string>
    <string name="fevrier">Février</string>
    <string name="mars">Mars</string>
    <string name="avril">Avril</string>
    <string name="mai">Mai</string>
    <string name="juin">Juin</string>
    <string name="juillet">Juillet</string>
    <string name="aout">Août</string>
    <string name="septembre">Septembre</string>
    <string name="octobre">Octobre</string>
    <string name="novembre">Novembre</string>
    <string name="decembre">Décembre</string>

    <!-- Jours de la semaine -->
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>

    <!-- Boutons -->
    <string name="button_moreCard">Menu</string>
    <string name="button_flag">Drapeau</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_alert">Signaler</string>
    <string name="button_done">Marquer comme fait</string>
    <string name="button_undone">Marquer à faire</string>
    <string name="button_fusion">Fusionner</string>
    <string name="img_done">ont fait</string>
    <string name="img_comm">Commentaires</string>
    <string name="button_save">Enregistrer</string>
    <string name="button_logout">Déconnexion</string>
    <string name="button_confirm">Confirmer</string>
    <string name="button_cancel">Annuler</string>
    <string name="button_yes">Oui</string>
    <string name="button_no">Non</string>
    <string name="button_login">Connexion</string>

    <!-- Flags -->
    <string name="flags_title">Définir un marqueur…</string>
    <array name="flags">
        <item>Gris</item>
        <item>Bleu</item>
        <item>Orange</item>
        <item>Rouge</item>
    </array>

    <!-- Messages -->
    <string name="msg_impossible">Impossible</string>
    <string name="msg_fusionimpossible">Maximum 3 devoirs de la même matière et pour la même date.</string>
    <string name="msg_wait">Quelques instants</string>
    <string name="msg_updating">Mise à jour en cours…</string>
    <string name="msg_alert">Devoir signalé au modérateur</string>

    <!-- Codes erreurs http -->
    <string name="code_404_title">Ressource indisponible</string>
    <string name="code_404_message">Essaie de relancer l\'application ou d\'actualiser les données à nouveau.</string>
    <string name="code_400_title">Syntaxe de la requête erronée</string>
    <string name="code_400_message">Merci de signaler cette erreur à &contactmail;</string>
    <string name="code_503_title">Erreur serveur</string>
    <string name="code_503_message">Merci de signaler cette erreur à &contactmail;</string>
    <string name="code_0_title">Erreur de connexion</string>
    <string name="code_0_message">Essaie de fermer puis de réouvrir l\'application</string>
    <string name="code_offline">Hors connexion. La synchronisation sera effectuée lorsqu\'une connexion à Internet sera détectée.</string>

    <!-- Textes à trou -->
    <string name="invit_text">%1$s vient de créer le groupe %2$s. Souhaites tu le rejoindre ?</string>

    <!-- UserPage -->
    <string name="title_userInformation">Mon compte</string>
    <string name="field_email">Adresse email</string>
    <string name="field_prenom">Prénom</string>
    <string name="field_nom">Nom</string>
    <string name="title_userNotifications">Notifications</string>
    <string name="field_notifsmail">Notifications par mail</string>
    <string name="field_rappels">À l\'ajout d\'un devoir</string>
    <string name="field_notifs">Rappel des devoirs non faits à…</string>

    <string-array name="field_notifsValues">
        <item>NON</item>
        <item>00H</item>
        <item>1H</item>
        <item>2H</item>
        <item>3H</item>
        <item>4H</item>
        <item>5H</item>
        <item>6H</item>
        <item>7H</item>
        <item>8H</item>
        <item>9H</item>
        <item>10H</item>
        <item>11H</item>
        <item>12H</item>
        <item>13H</item>
        <item>14H</item>
        <item>15H</item>
        <item>16H</item>
        <item>17H</item>
        <item>18H</item>
        <item>19H</item>
        <item>20H</item>
        <item>21H</item>
        <item>22H</item>
        <item>23H</item>
    </string-array>

    <!-- Nouveau Page -->
    <string name="new_infosprincipales">Infos principales</string>
    <string name="new_subject">Matière</string>
    <string name="new_text">Description</string>
    <string name="new_date">À faire pour le…</string>

    <!-- Comment page -->
    <string name="comment_new">Ajouter un commentaire</string>
    <string name="comment_meta">\@%1$s \t (%2$s)</string>

    <!-- SelectFilter Page -->
    <string name="select_sectionApplied">Filtres appliqués (Appuie pour effacer)</string>
    <string name="select_sectionSubjects">Filtrer par matière…</string>
    <string name="select_sectionFilters">Filtrer par marqueur…</string>
    <string name="select_sectionDone">Ne montrer que les devoirs…</string>
    <string name="filterDone">Faits</string>
    <string name="filerUnDone">À faire</string>
    <string name="pourle">Pour le %1$s</string>
    <string name="fait">fait</string>

    <!-- LoginPage -->
    <string name="username">Adresse email</string>
    <string name="password">Mot de passe</string>
</resources>
