<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <include layout="@layout/appliedfilters" />

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/select_sectionSubjects"
            android:textSize="16sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filterssubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clipToPadding="false"
            android:scrollbars="none" />

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/select_sectionFilters"
            android:textSize="16sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/filtersflag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clipToPadding="false"
            android:scrollbars="none" />

        <TextView
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:text="@string/select_sectionDone"
            android:textSize="16sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/filtersdone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clipToPadding="false"
            android:scrollbars="none" />

    </LinearLayout>
</ScrollView>