<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/fusion_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/md_keylines"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="@dimen/md_keylines"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/title_fusion"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorDarkText"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:background="@color/colorDivider" />

                <TextView
                    android:id="@+id/fusion_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginStart="@dimen/md_keylines"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/article_subheading" />

                <TextView
                    android:id="@+id/fusion_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginStart="@dimen/md_keylines"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/article_subheading" />

                <TextView
                    android:id="@+id/fusion_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/md_keylines"
                    android:layout_marginStart="@dimen/md_keylines"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/article_subheading" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/md_keylines"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fusion_confirm"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:padding="5dp"
                        android:text="@string/button_confirm" />

                    <Button
                        android:id="@+id/fusion_cancel"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".50"
                        android:padding="5dp"
                        android:text="@string/button_cancel" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/view_invitations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/md_keylines"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/my_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/md_keylines"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <!-- TODO icone + position visible dès le début -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="@dimen/md_keylines"
        android:layout_marginLeft="@dimen/md_keylines"
        android:layout_marginRight="@dimen/md_keylines"
        android:layout_marginStart="@dimen/md_keylines"
        android:clickable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/colorText"
        app:fabSize="normal"
        app:layout_anchor="@id/anchor"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>